# project-cpp-oj-vibecoding

./: .gitignore  CMakeLists.txt  README.md  SPEC.md  TASK.md
config/: config.example.json
database/: create_user.sql  init.sql
public/: admin.html  index.html  login.html  problem.html  register.html
public/css/: style.css
public/js/: admin.js  api.js  auth.js  problem.js  problem_detail.js  submit.js
scripts/: oj-backend.service  start.sh
src/: main.cc
src/db/: connection_pool.cc  connection_pool.hpp
src/handler/: admin_handler.cc  admin_handler.hpp  auth_handler.cc  auth_handler.hpp  problem_handler.cc  problem_handler.hpp  submit_handler.cc  submit_handler.hpp
src/model/: problem.hpp  test_case.hpp  user.hpp
src/server/: router.h  server.cc
src/service/: auth_service.cc  auth_service.hpp  executor_service.cc  executor_service.hpp  problem_service.cc  problem_service.hpp
src/utils/: config.cc  config.hpp  logger.cc  logger.hpp
test/auth_test/: auth_test.cc  build.sh
test/executor_test/: build.sh  executor_test.cc
test/problem_test/: build.sh  problem_test.cc
tests/integration/: admin_api_test.cc  admin_api_test_build.sh  auth_api_test.cc  auth_api_test_build.sh  problem_api_test.cc  problem_api_test_build.sh  submit_api_test.cc  submit_api_test_build.sh  test_httplib_stub.h
